# llama-cpp-ocaml

./: .gitmodules  CHANGES.md  LICENSE  README.md  dune-project  llama-cpp-ocaml.opam  ocaml-llama-cpp.opam
examples/history/: dune-project
examples/history/lib/: dune  history.ml
examples/history/test/: basic.ml  dune  semipersistent.ml
examples/prompt-repl/: dune  prompt_repl.ml
examples/simple/: dune  simple.ml
examples/utopilot/: LICENSE  dune  llm.ml  llm2.ml  utopilot.ml
src/: bnf.ml  dune  extra_stubs.c  extra_stubs.h  llama_cpp.ml  llama_cpp.mli  llama_head  produce-static-archive.patch
src/config/: discover.ml
src/functions/: dune  llama_functions.ml
src/stubgen/: dune  generate_c_functions.ml  generate_c_types.ml  generate_ml_functions.ml
src/types/: dune  llama_fixed_types.ml  llama_types.ml
test/: dune  llama_test.ml
