(lang dune 2.8)
(name llama-cpp-ocaml)
(version 0.0.1)
(generate_opam_files false)
(source (uri git+https://github.com/atacama-dev/llama-cpp-ocaml))
(bug_reports http://github.com/atacama-dev/llama-cpp-ocaml)
(homepage http://github.com/atacama-dev/llama-cpp-ocaml)
(authors "Ilias Garnier")
(maintainers "igarnier@protonmail.com")

(package
   (name llama-cpp-ocaml)
   (synopsis "Ctypes bindings to llama.cpp")
   (description "llama-cpp-ocaml is a MIT-licensed set of ctypes bindings to llama.cpp, a performant and lightweight library to perform inference on various kinds of large language models.")
   (license MIT)
   (tags (experimental))
   (depends
     (ocaml (>= 4.14.1))
     (ctypes (>= 0.21.1))
     (ctypes-foreign (>= 0.21.1))
   )
)