(data_only_dirs llama.cpp)

;; linux
(rule
  (alias build-llama)
  (targets libllama_bindings.a dllllama_bindings.so)
  (enabled_if
   (or
    (= %{system} linux)
    (= %{system} linux_elf)
    (= %{system} elf)))
  (deps (source_tree llama.cpp) produce-static-archive.patch)
  (action
    (no-infer
      (progn
        (run chmod +w llama.cpp/Makefile)
        (with-stdin-from
         produce-static-archive.patch
         (run patch -d llama.cpp -p1))
        (run make -C llama.cpp libllama.so libllama.a)
        (copy llama.cpp/libllama.a libllama_bindings.a)
        (copy llama.cpp/libllama.so dllllama_bindings.so)))))

;; bsd
(rule
  (alias build-llama)
  (targets libllama_bindings.a dllllama_bindings.so)
  (enabled_if
   (or
    (= %{system} netbsd)
    (= %{system} freebsd)
    (= %{system} openbsd)
    (= %{system} bsd)
    (= %{system} bsd_elf)))
  (deps (source_tree llama.cpp) produce-static-archive.patch)
  (action
    (no-infer
      (progn
        (run chmod +w llama.cpp/Makefile)
        (with-stdin-from
         produce-static-archive.patch
         (run patch -d llama.cpp -p1))
        (run gmake -C llama.cpp libllama.so libllama.a)
        (copy llama.cpp/libllama.a libllama_bindings.a)
        (copy llama.cpp/libllama.so dllllama_bindings.so)))))


;; macos
(rule
  (alias build-llama)
  (targets libllama_bindings.a dllllama_bindings.so)
  (enabled_if
   (or (= %{system} macosx)))
  (deps (source_tree llama.cpp) produce-static-archive.patch)
  (action
    (no-infer
      (progn
        (run chmod +w llama.cpp/Makefile)
        (with-stdin-from
         produce-static-archive.patch
         (run patch -d llama.cpp -p1))
        (run make -C llama.cpp libllama.so libllama.a)
        (copy llama.cpp/libllama.a libllama_bindings.a)
        (copy llama.cpp/libllama.so dllllama_bindings.so)))))

(library
  (name llama_cpp)
  (package llama-cpp-ocaml)
  (modules Llama_cpp Llama_generated)
  (libraries ctypes ctypes.foreign str integers bigarray-compat llama_fixed_types llama_functions)
  (foreign_archives llama_bindings)
  (foreign_stubs
   (language c)
   (names c_generated_functions extra_stubs)
   (include_dirs %{project_root}/src/llama.cpp))
  (library_flags (:include library_flags.sexp))
  (flags (:standard -linkall -cclib -lstdc++))
; (ocamlopt_flags (-ccopt (:include ccopts.sexp)))
)

(rule
 (targets library_flags.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (run %{discover})))

(rule
 (with-stdout-to
  llama_generated.ml
  (run stubgen/generate_ml_functions.exe llama_stub)))

(rule
 (targets generate_types_step_2.exe)
 (deps
  (:c c_generated_types.c))
 (action
  (bash
   "%{cc} %{c} -std=c11 -I '%{lib:ctypes:.}' -I %{ocaml_where} -I llama.cpp -o %{targets}")))

(rule
 (with-stdout-to
  c_generated_types.c
  (run stubgen/generate_c_types.exe llama_stub)))

(rule
 (with-stdout-to
  c_generated_functions.c
  (run stubgen/generate_c_functions.exe llama_stub)))
