(library
  (name llama_types)
  (package llama-cpp-ocaml)
  (modules Llama_types)
  (libraries ctypes.stubs)
)

(library
  (name llama_fixed_types)
  (package llama-cpp-ocaml)
  (modules Llama_fixed_types Llama_c_generated_types)
  (libraries ctypes.stubs ctypes llama_types)
)

(rule
 (with-stdout-to
  llama_c_generated_types.ml
  (run ../generate_types_step_2.exe)))
